Fix vertical align for seach submit icon

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -320,7 +320,7 @@ $navbar-height: 50px;
     font-size: 14px;
     color: #000;
     position: absolute;
-    top: 10px;
+    top: 5px;
     right: 5px;
   }
   .form-control:focus::placeholder {
